fixed slide-out menu

--- a/contact.html
+++ b/contact.html
@@ -18,13 +18,12 @@
 
     <nav class="navBar">
         <div class="wrapper">
-            <input type="checkbox" id="openSidebarMenu">
             <label for="openSidebarMenu">
                 <img src="./assets/menu-button.svg" alt="Menu button" class="menuIcon">
             </label>
             <div class="slideOutNav">
                 <div class="buttonContainer">
-                    <button>x</button>
+                    <button class="closeMenuButton">x</button>
                 </div>
                 <nav>
                     <ul class="mainMenu">
@@ -235,6 +234,6 @@
             </div>
         </div>
     </footer>
-
+    <script src="script.js"></script>
 </body>
 </html>
