--- a/shop.html
+++ b/shop.html
@@ -20,13 +20,12 @@
 
 <nav class="navBar">
     <div class="wrapper">
-        <input type="checkbox" id="openSidebarMenu">
         <label for="openSidebarMenu">
             <img src="./assets/menu-button.svg" alt="Menu button" class="menuIcon">
         </label>
         <div class="slideOutNav">
             <div class="buttonContainer">
-                <button>x</button>
+                <button class="closeMenuButton">x</button>
             </div>
             <nav>
                 <ul class="mainMenu">
@@ -34,7 +33,7 @@
                     <li><a href="#">About</a></li>
                     <li><a href="#">FAQ</a></li>
                     <li><a href="#">News</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="./contact.html">Contact</a></li>
                 </ul>
                 <hr>
                 <ul class="legal">
@@ -327,6 +326,6 @@
         </div> 
     </div> 
 </footer>
-
+<script src="script.js"></script>    
 </body>
 </html>
