--- a/index.html
+++ b/index.html
@@ -17,13 +17,12 @@
 
     <nav class="navBar">
         <div class="wrapper">
-            <input type="checkbox" id="openSidebarMenu">
             <label for="openSidebarMenu">
                 <img src="./assets/menu-button.svg" alt="Menu button" class="menuIcon">
             </label>
             <div class="slideOutNav">
                 <div class="buttonContainer">
-                    <button>x</button>
+                    <button class="closeMenuButton">x</button>
                 </div>
                 <nav>
                     <ul class="mainMenu">
@@ -31,7 +30,7 @@
                         <li><a href="#">About</a></li>
                         <li><a href="#">FAQ</a></li>
                         <li><a href="#">News</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="./contact.html">Contact</a></li>
                     </ul>
                     <hr>
                     <ul class="legal">
